chore: 코드 서식 다시 지정